# poem-admin

./: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  cliff.toml
.github/workflows/: build.yml  integration-tests.yml
dev/: config.toml
init_data/: 01_menu.sql  02_route.sql
migrations/: 20250508021428_initial.sql
scripts/: ci-check.sh  init_db.sh  run_all_tests.sh  run_integration_tests.sh
src/: cli.rs  errors.rs  lib.rs  start.rs
src/config/: config.rs
src/domain/: ports.rs  services.rs
src/domain/models/: account.rs  auth.rs  menu.rs  mod.rs  operation_log.rs  organization.rs  page_utils.rs  role.rs  role_menu.rs  route.rs
src/input/http/: http_server.rs  response.rs
src/input/http/handlers/: account.rs  health.rs  login.rs  menu.rs  mod.rs  operation_log.rs  organization.rs  role.rs
src/input/http/middleware/: auth.rs  mod.rs  operation_log.rs  permission.rs
src/output/db/: account.rs  base.rs  database.rs  db.rs  menu.rs  mod.rs  operation_log.rs  organization.rs  repository_impl.rs  role.rs  role_menu.rs  route.rs
src/server/: http_server.rs
src/utils/: ip_validator.rs  mod.rs  runtime.rs  telemetry.rs
tests/: api_integration_tests.rs  integration_tests.rs  test_config.toml
tests/common/: mod.rs
