[package]
name = "poem-admin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "poem-admin"
path = "src/bin/server/main.rs"

[dependencies]
anstyle = "1.0.10"
build-data = "0.3.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
const_format = "0.2.34"
ctrlc = "3.4.6"
error-stack = "0.5.0"
fastimer = "0.9.0"
gix-discover = "0.40.1"
local-ip-address = "0.6.5"
log = "0.4.27"
logforth = { version = "0.24.0", features = [
    "colored",
    "json",
    "fastrace",
    "rolling-file",
] }
mea = "0.3.5"
nutype = { version = "0.6.1", features = ["serde"] }
pin-project = "1.1.10"
poem = "3.1.10"
rust-embed = "8.7.1"
serde = { version = "1.0.219", features = ["derive"] }
shadow-rs = "1.1.1"
sqlx = { version = "0.8.5", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "uuid",
    "migrate",
    "chrono",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
toml_edit = { version = "0.22.26", features = ["serde"] }

[build-dependencies]
build-data = "0.3.0"
gix-discover = "0.40.1"
shadow-rs = "1.1.1"
